public/global.css
/* ... */
@media (max-height: 600px) {
	:root {
		--size-padding-bottom: 1.5rem;
	}
}

@media (display-mode: standalone) {
	:root {
		--size-padding-bottom: 3rem;
	}
}

.app-appleFullscreen {
	--size-padding-bottom: 3rem;
}



/* general styling
============================================================================ */
html, body {
	height: 100%;
	overflow: hidden;

	background-color: var(--color-background);

	font-family: var(--font-normal);
}

/* this is needed to set the proper colors for iOS PWA that takes the
status bar color from the body background color */
body:before {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;

	background-color: var(--color-pure);

	content: '';
}

.app-popupShown {
	background-color: var(--color-pure);

	transition: background-color .1s linear .5s;
}


@media (max-height: 550px) {
	html {
		font-size: .8em;
	}
}

.intro {
	position: absolute;
	top: -100vh;
}



/* page structure
============================================================================ */
.app {
	height: 100%;
	max-height: 100%;
	overflow: hidden;
	display: flex;
	position: relative;
	z-index: 50;
	
	background-color: var(--color-background);

	transition-property: transform, border-radius, box-shadow;
	transition-duration: .4s, .2s, .2s;
	transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
}

.app-menuShown {
	border-bottom-left-radius: 14px;
	border-bottom-right-radius: 14px;
	box-shadow: 0 3px 3px rgba(0, 0, 0, .4);
	transition-delay: 0s;
}

.app-unfocused .main,
.app-unfocused .sidebar {
	filter: blur(4px);
}

.main {
	max-width: 440px;
	padding-top: var(--size-padding);
	padding-bottom: var(--size-padding-bottom);
	padding-left: var(--size-spacing);
	padding-right: var(--size-spacing);
	overflow: hidden;
	position: absolute;
	left: var(--size-sidebar);
	right: 0;
	top: 0;
	bottom: 0;
	z-index: var(-z-app);
	display: flex;
	flex-direction: column;
	justify-content: space-between;

	transition: filter .5s linear;
}



/* texts
============================================================================ */
.text-title {
	line-height: 1.14em;
	font-size: 2.63rem;
	font-weight: 600;
}

.text-subtitle {
	margin-top: 1rem;

	line-height: 1.17em;
	font-size: 1.5rem;
	font-weight: 600;
}

.text-note {
	margin-top: 1rem;

	line-height: 1.44em;
	font-size: 1rem;
}

.action-secondary {
	text-align: left;
	text-transform: uppercase;
	line-height: 1.05em;
	font-size: 2.75rem;
	font-weight: 600;
}

@media (max-height: 600px) {
	.text-title {
		font-size: 2rem;
	}

	.text-subtitle {
		font-size: 1.25rem;
	}

	.action-secondary {
		font-size: 2rem;
	}
}



/* inputs
============================================================================ */
input {
	transition-property: color, border;
	transition-duration: .1s;
	transition-timing-function: linear;
}

input[type="number"] {
	width: 30%;

	border-radius: 5px;
	background-color: var(--color-input);

	text-align: center;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0;
}

input[type="number"]::placeholder {
	color: var(--color-placeholder);
}

input:focus {
	outline: none;
	color: var(--color-focus);
}



/* content
============================================================================ */
.content {
	text-transform: uppercase;
	font-size: 1.81rem;
}

.content-readable {
	text-transform: none;
}

.content-info-value {
	margin-bottom: 1.5rem;
}

button {
	transition: color .1s linear;
}

@media (hover: hover) {
	.app button:hover {
		color: var(--color-hover);
	}
}

.app button:focus {
	outline: none;
	color: var(--color-hover);
}

.app button:active {
	outline: none;
	color: var(--color-active);
}



/* menu
============================================================================ */
.menu button {
	line-height: 1em;
	letter-spacing: -1px;
	text-align: left;
	text-transform: uppercase;
	font-family: var(--font-condensed);
	font-size: 2rem;
	font-weight: 700;
	color: inherit;
}

.menu-question {
	text-align: center;
}

.menu button:hover {
	color: var(--color-hoverMenu);
}

.menu button:focus {
	outline: none;
	color: var(--color-hoverMenu);
}

.menu button:active {
	outline: none;
	color: var(--color-pureActive);
}



/* menu forms
============================================================================ */
.form-row + .form-row {
	margin-top: 1rem;
}

.form-label {
	margin-bottom: .3em;

	font-family: var(--font-condensed);
	font-size: 1.6rem;
}

.menu-form select {
	width: 100%;
	padding: .5em;

	border: .1px solid var(--color-pureContent);
	border-bottom: 4px solid var(--color-pureContent);
	border-radius: 0;
	background-color: transparent;

	color: var(--color-pureContent);
}

.menu-form select option {
	color: var(--color-text);
}

@media (min-width: 800px){
	.menu-form div {
		width: 100%;
		display: table;
	}

	.form-row {
		display: table-row;
	}

	.menu-form select {
		width: auto;
		min-width: 200px;
		margin-left: 2em;
	}

	.form-label {
		width: 50%;
		display: table-cell;
		text-align: right;
	}
}



/* menu texts
============================================================================ */
.menu-article h2 {
	margin-bottom: .3em;

	line-height: 1em;
	font-family: var(--font-condensed);
	font-size: 2em;
	font-weight: 600;
}

.menu-article p + h2,
.menu-article ul + h2,
.menu-article .video + h2 {
	margin-top: 1em;
}

.menu-article p + p,
.menu-article li + li,
.menu-article ul + p {
	margin-top: .5em;
}

.menu-article p,
.menu-article li {
	line-height: 1.4em;
}

.menu-article ul {
	margin-left: 1.1em;
}

.menu-article li:before {
	margin-left: -1.15em;
	content: '— ';
}

.menu-article a {
	text-decoration: underline;
	color: var(--color-link);
}

.menu-article strong {
	font-weight: bold;
}

.menu-article .video {
	max-width: 100%;
	height: 0;
	margin: 1em 0;
	padding-bottom: 56.25%;
	position: relative;
	overflow: hidden;
}
/* ... */

